--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,10 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+package-lock.json
 
 # Temporary build files
 postcss 
+
+# Bootstrap folder
+bootstrap/
